기본 설정 변경 및  테스트 글 쓰기

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-home-title: H2O Theme For Jekyll
-description: 或许是最漂亮的Jekyll主题
+home-title: Eunbi's Blog
+description: welcome🙂
 ---
 
 {% include header.html %}
